--- a/src/client/package.json
+++ b/src/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@presidio-dev/cor-matrix",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -31,12 +31,13 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@commander-js/extra-typings": "^14.0.0",
     "@elysiajs/eden": "^1.3.2",
     "chalk": "^5.4.1",
+    "commander": "^12.1.0",
     "dotenv": "^16.5.0",
     "ignore-walk": "^7.0.0",
-    "isbinaryfile": "^5.0.4",
-    "yargs": "17.7.2"
+    "isbinaryfile": "^5.0.4"
   },
   "engines": {
     "node": ">=16.0.0",
